[package]
name = "super_loop"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.1", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
]}

esp-hal = { version = "0.20.1", features = [
    "esp32c6",
] }
esp-println = { version = "0.11.0", features = ["esp32c6", "log"] }
log = { version = "0.4.21" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[patch.crates-io]
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", rev = "be82a6521a5859129ca4f98e54e4d4d6cedffe76"}
